# DZ36-4

./: CMakeLists.txt  README.md  main.cpp
resources/: resources.qrc
sources/: ChatManager.cpp  ChatManager.h  MainLoginForm.cpp  MainLoginForm.h  MainWindow.cpp  MainWindow.h  Message.cpp  Message.h  MessageListWidget.cpp  MessageListWidget.h  Network.cpp  Network.h  RegistrationForm.cpp  RegistrationForm.h  Security.cpp  Security.h  User.cpp  User.h  config.h
sources/logger/: Logger.cpp  Logger.h
sources/server/: serverlogmodel.cpp  serverlogmodel.h  servermainwindow.cpp  servermainwindow.h  servermanager.cpp  servermanager.h  serveruserlistmodel.cpp  serveruserlistmodel.h
sources/ui/: loginform.ui  mainwindow.ui  registrationform.ui  servermainwindow.ui  userinfodialog.ui
translations/: en_US.ts  ru_RU.ts
